# server-companion

./: .gitignore  .gitmodules  .nvim.lua  README.md  notes.md
client/: go.mod  main.go
pico/: CMakeLists.txt  example_config.h  main.c  run.sh  serial.sh
